setting up student branch

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,10 @@
     ==================================== -->
     <link href='http://fonts.googleapis.com/css?family=Monda' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Prosto+One' rel='stylesheet' type='text/css'>
-<!--     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontello.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css"> -->
-    @@styles
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- Fav and Touch Icons
     ==================================== -->
@@ -197,9 +196,8 @@
       </div>
     </footer>
 
-    @@scripts
-<!--     // <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    // <script src="js/lib/bootstrap-transition.js"></script>
-    // <script src="js/lib/bootstrap-collapse.js"></script> -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="js/lib/bootstrap-transition.js"></script>
+    <script src="js/lib/bootstrap-collapse.js"></script>
   </body>
 </html>
